fixing scaling issue on small screen

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,14 +17,22 @@
     --whitespace-xl: clamp(2rem, 5rem + 1vw, 6rem);
     --whitespace-xxl: clamp(3rem, 7rem + 1vw, 8rem);
 
-    --font-size-xs: .9rem;
+    /* --font-size-xs: .9rem;
     --font-size-s: 1.05rem;
     --font-size-base: 1.125rem;
     --font-size-m: clamp(1rem, 0.5rem + 1vw, 1.6rem);
     --font-size-l: 1.5rem;
     --font-size-xl: 2rem;
     --font-size-xxl: 3.125rem;
-    --font-size-xxxl: 5rem;
+    --font-size-xxxl: 5rem; */
+    --font-size-xs: clamp(0.8rem, 0.6rem + 0.2vw, 1rem);
+    --font-size-s: clamp(0.9rem, 0.75rem + 0.4vw, 1.1rem);
+    --font-size-base: clamp(1.1rem, 0.85rem + 0.5vw, 1.2rem);
+    --font-size-m: clamp(1.25rem, 1rem + 0.6vw, 1.6rem);
+    --font-size-l: clamp(1.5rem, 1.25rem + 0.8vw, 2rem);
+    --font-size-xl: clamp(2rem, 1.75rem + 1vw, 2.5rem);
+    --font-size-xxl: clamp(2.5rem, 2rem + 1.5vw, 3.5rem);
+    --font-size-xxxl: clamp(4rem, 3rem + 2vw, 6rem);
 
     --font-family-playfair: Playfair Display, Georgia, serif;
     --font-family-inconsolata: Inconsolata, Helvetica, Arial, sans-serif;
@@ -95,6 +103,7 @@ html, body {
     left: 0;
     right: 0;
     height: 10px;
+    inline-size: 100%;
     background: var(--color-beige-dark);
     transform-origin: 0%;
 }
@@ -107,7 +116,7 @@ html, body {
     height: 10px;
     background: var(--color-red-primary);
     transform-origin: 0%;
-    width: 0%;
+    inline-size: 0%;
 }
 
 body {
@@ -115,8 +124,8 @@ body {
     font-size: var(--font-size-base);
     color: var(--color-black);
     background-color: var(--color-background);
-    position: relative;
     line-height: 1.6;
+    inline-size: 100vw;
 }
 
 path {
@@ -143,7 +152,11 @@ path {
 }
 
 .container--s {
-    margin-inline: var(--whitespace-base);
+    padding-inline: var(--whitespace-base);
+}
+
+.container--m {
+    padding-inline: var(--whitespace-m);
 }
 
 img,
@@ -304,18 +317,17 @@ button {
     font-family: var(--font-family-playfair);
     font-weight: 600;
     text-transform: uppercase;
-    font-size: clamp(3.125rem, 13vw, 9rem);
+    font-size: clamp(2rem, 13vw, 9rem);
 }
 
 .hero__title--top {
-    margin-block-end: -10vh;
-    margin-block-end: clamp(-10rem, -17vw, -6rem);
+    margin-block-end: clamp(-7rem, -10vw, -3rem);
 }
 
 .hero__title--bottom {
 /* font-size: var(--font-size-xxxl); */
-    font-size: clamp(5rem, 16vw, 10rem);
-    margin-block-start: clamp(-13rem, -20vw, -7rem);
+    font-size: clamp(4rem, 16vw, 10rem);
+    margin-block-start: clamp(-12rem, -12vw, -4rem);
 }
 
 .hero__graphic {
@@ -342,8 +354,9 @@ button {
 }
 
 .hero__graphic--bg {
-    max-inline-size: 140%;
-    inline-size: 140%;
+    /* max-inline-size: 140%;
+    inline-size: 140%;   */
+    height: auto;
     margin-inline-start: -1.5rem;
     margin-block-end: -3rem;
     z-index: -5;
@@ -352,7 +365,7 @@ button {
 .hero__subtitle {
     display: grid;
     place-items: center;
-    margin-block-start: -2rem;
+    margin-block-start: -1rem;
 }
 
 .subtitle__p, .subtitle__svg {
@@ -362,13 +375,13 @@ button {
 
 .subtitle__p {
     font-family: var(--font-family-inconsolata);
-    font-size: var(--font-size-m);
+    font-size: var(--font-size-base);
     font-weight: 600;
-    line-height: 1.4;
+    line-height: 1.3;
     padding-inline: 2rem;
     max-inline-size: 35ch;
     color: var(--color-white);
-    margin-block-start: clamp(-4rem, -10vw, -1rem);
+    margin-block-start: clamp(-2rem, -20vw, -2rem);
 }
 
 .subtitle__svg {
@@ -384,16 +397,16 @@ button {
 }
 
 .note__p {
-    font-family: var(--font-family-inconsolata);;
+    font-family: var(--font-family-inconsolata);
     color: var(--color-red-primary);
     font-weight: 500;
     font-size: var(--font-size-s);
     padding: var(--whitespace-s);
-    max-inline-size: 45ch;
+    max-inline-size: 40ch;
 }
 
 .note__svg {
-    inline-size: 25rem;
+    inline-size: clamp(20rem, 20vw, 25rem);
     block-size: auto;
 }
 
@@ -406,15 +419,16 @@ button {
     block-size: 30vh;
     align-items: center;
     margin-block-start: 5rem;
+    margin-block-end: clamp(1rem, 5vw, 10rem);
 }
 
 .year__p {
     text-align: center;
     font-family: var(--font-family-playfair);
     font-weight: bold;
-    font-size: clamp(12rem, 25vw, 19rem);
+    font-size: clamp(8rem, 30vw, 19rem);
     line-height: 1;
-    margin-block-end: clamp(10rem, 20vw, 15rem);
+    margin-block-end: clamp(10rem, 25vw, 15rem);
 }
 
 .year__svg {
@@ -482,6 +496,74 @@ button {
     block-size: auto;
 }
 
+/* ------------------------------------- INTRO ------------------------------------- */
+
+.profile__card {
+    display: none;
+}
+
+.profile__card--top, .profile__card--bottom {
+    display: block;
+}
+
+.profile__content {
+    background-color: var(--color-white);
+    display: flex;
+    flex-direction: column;
+    gap: var(--whitespace-base);
+    padding-block: var(--whitespace-m);
+}
+
+.profile__name {
+    font-family: var(--font-family-playfair);
+    font-size: var(--font-size-xxl);
+    font-weight: 600;
+    line-height: 1.2;
+    text-align: center;
+    margin-block-end: var(--whitespace-base);
+}
+
+h4 {
+    padding-inline: var(--whitespace-m);
+    font-family: var(--font-family-inconsolata);
+    font-weight: 700;
+    font-size: var(--font-size-m);
+    background-color: var(--color-highlights);
+    padding: 0.05rem var(--whitespace-s);
+    color: var(--color-white);
+    max-width: fit-content;
+    margin-bottom: var(--whitespace-xxs);
+}
+
+.profile__img {
+    inline-size: 19.75rem;
+    block-size: auto;
+}
+
+.basics__item {
+    margin-block-end: var(--whitespace-s);
+}
+
+.goals__list {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.goals__item {
+    margin-block-start: var(--whitespace-s);
+    list-style: disc;
+    margin-inline: var(--whitespace-base);
+}
+
+
+
+
+
+
+
+
+
 /* ------------------------------------- MEDIA QUERIES ------------------------------------- */
 @media screen and (min-width: 30em) {
     .nav__list {
@@ -531,10 +613,43 @@ button {
     .intro__p--2::after{
         content:"But the rewards? They could set you up for life. With ambition and determination, you’re ready to build a printing empire. Will you succeed? Or fall into the dangers of this high-stakes business?"
     }
-    
 }
 
-@media screen and (min-width: 32em) {
+@media screen and (min-width: 35em) {
+    .profile__content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas:
+                "profile__name profile__name"
+                "profile__graphic profile__basics"
+                "profile__graphic profile__basics"
+                "profile__goals profile__goals"
+                "profile__bio profile__bio";
+        }
+    
+        .profile__name {
+            grid-area: profile__name;
+            justify-self: start;
+        }
+    
+        .profile__basics {
+            grid-area: profile__basics;
+            align-self: center;
+            margin-block-start: var(--whitespace-m);
+        }
+    
+        .profile__graphic {
+            grid-area: profile__graphic;
+            justify-self: start;
+        }
+    
+        .profile__goals {
+            grid-area: profile__goals;
+        }
+    
+        .profile__bio {
+            grid-area: profile__bio;
+        }
 }
 
 @media screen and (min-width: 40em) {
@@ -575,6 +690,26 @@ button {
         
         display: none;
     }
+
+    .profile__content {
+        grid-template-columns: 1fr 1.2fr;
+    }
+}
+
+@media (min-width: 50em) {
+    .profile__card--top,
+        .profile__card--bottom {
+            display: none;
+        }
+    
+        .profile__card {
+            display: block;
+            padding-inline: var(--whitespace-base);
+        }
+    
+        .profile__content {
+            background-color: var(--color-background);
+        }
 }
 
 @media (min-width: 60em) {
